ft_containers-unit-test/logs.txt
In file included from ../map_tests/operator >=.cpp:1:
In file included from ../map_tests/../system/system_methods.ipp:2:
In file included from ../map_tests/../system/lib.hpp:24:
../map_tests/../system/Alloc.hpp:55:27: warning: variadic templates are a C++11 extension [-Wc++11-extensions]
template <class _Up, class... _Args>
                          ^
../map_tests/../system/Alloc.hpp:58:34: warning: rvalue references are a C++11 extension [-Wc++11-extensions]
        construct(_Up* __p, _Args&&... __args)
                                 ^
../map_tests/../system/Alloc.hpp:164:27: warning: variadic templates are a C++11 extension [-Wc++11-extensions]
template <class _Up, class... _Args>
                          ^
../map_tests/../system/Alloc.hpp:167:34: warning: rvalue references are a C++11 extension [-Wc++11-extensions]
        construct(_Up* __p, _Args&&... __args)
                                 ^
4 warnings generated.
ed.
r: no member named 'at' in 'ft::map<int, int>'
        v.push_back(mp.at(400000));
                    ~~ ^
../map_tests/at().cpp:38:55: note: in instantiation of function template specialization 'at_test<int, int>' requested here
    exit(run_map_unit_test<int, int>("at()", at_test, at_test));
                                                      ^
../map_tests/at().cpp:28:24: error: no member named 'at' in 'ft::map<int, int>'
        v.push_back(mp.at(400001));
                    ~~ ^
4 warnings and 2 errors generated.
  ^
4 warnings and 2 errors generated.
template <class T> typename _enable_if< std::is_unsigned<T>::value >::type
                                      ^
4 warnings and 3 errors generated.
:8:23: error: expected expression
        (_is_integral<float>() == std::is_integral<float>()) ? 0 : res = 0;
                             ^
../utilities_tests/is_integral.cpp:9:3: error: use of undeclared identifier 'ft'
        (_is_integral<int>() == std::is_integral<int>()) ? 0 : res = 0;
         ^
../utilities_tests/../system/../../config.hpp:24:24: note: expanded from macro '_is_integral'
#define _is_integral            ft::is_integral
                                ^
../utilities_tests/is_integral.cpp:9:19: error: expected '(' for function-style cast or type construction
        (_is_integral<int>() == std::is_integral<int>()) ? 0 : res = 0;
                      ~~~^
../utilities_tests/is_integral.cpp:9:21: error: expected expression
        (_is_integral<int>() == std::is_integral<int>()) ? 0 : res = 0;
                           ^
../utilities_tests/is_integral.cpp:10:3: error: use of undeclared identifier 'ft'
        (_is_integral<bool>() == std::is_integral<bool>()) ? 0 : res = 0;
         ^
../utilities_tests/../system/../../config.hpp:24:24: note: expanded from macro '_is_integral'
#define _is_integral            ft::is_integral
                                ^
../utilities_tests/is_integral.cpp:10:20: error: expected '(' for function-style cast or type construction
        (_is_integral<bool>() == std::is_integral<bool>()) ? 0 : res = 0;
                      ~~~~^
../utilities_tests/is_integral.cpp:10:22: error: expected expression
        (_is_integral<bool>() == std::is_integral<bool>()) ? 0 : res = 0;
                            ^
../utilities_tests/is_integral.cpp:11:3: error: use of undeclared identifier 'ft'
        (_is_integral<char>() == std::is_integral<char>()) ? 0 : res = 0;
         ^
../utilities_tests/../system/../../config.hpp:24:24: note: expanded from macro '_is_integral'
#define _is_integral            ft::is_integral
                                ^
../utilities_tests/is_integral.cpp:11:20: error: expected '(' for function-style cast or type construction
        (_is_integral<char>() == std::is_integral<char>()) ? 0 : res = 0;
                      ~~~~^
../utilities_tests/is_integral.cpp:11:22: error: expected expression
        (_is_integral<char>() == std::is_integral<char>()) ? 0 : res = 0;
                            ^
../utilities_tests/is_integral.cpp:12:3: error: use of undeclared identifier 'ft'
        (_is_integral<signed char>() == std::is_integral<signed char>()) ? 0 : res = 0;
         ^
../utilities_tests/../system/../../config.hpp:24:24: note: expanded from macro '_is_integral'
#define _is_integral            ft::is_integral
                                ^
../utilities_tests/is_integral.cpp:12:23: error: expected '(' for function-style cast or type construction
        (_is_integral<signed char>() == std::is_integral<signed char>()) ? 0 : res = 0;
                      ~~~~~~ ^
../utilities_tests/is_integral.cpp:13:3: error: use of undeclared identifier 'ft'
        (_is_integral<unsigned char>() == std::is_integral<unsigned char>()) ? 0 : res = 0;
         ^
../utilities_tests/../system/../../config.hpp:24:24: note: expanded from macro '_is_integral'
#define _is_integral            ft::is_integral
                                ^
../utilities_tests/is_integral.cpp:13:25: error: expected '(' for function-style cast or type construction
        (_is_integral<unsigned char>() == std::is_integral<unsigned char>()) ? 0 : res = 0;
                      ~~~~~~~~ ^
../utilities_tests/is_integral.cpp:14:3: error: use of undeclared identifier 'ft'
        (_is_integral<wchar_t>() == std::is_integral<wchar_t>()) ? 0 : res = 0;
         ^
../utilities_tests/../system/../../config.hpp:24:24: note: expanded from macro '_is_integral'
#define _is_integral            ft::is_integral
                                ^
../utilities_tests/is_integral.cpp:14:23: error: expected '(' for function-style cast or type construction
        (_is_integral<wchar_t>() == std::is_integral<wchar_t>()) ? 0 : res = 0;
                      ~~~~~~~^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
4 warnings and 20 errors generated.
